--- a/SidebarMenu/Base.lproj/Main.storyboard
+++ b/SidebarMenu/Base.lproj/Main.storyboard
@@ -336,40 +336,17 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
+                    <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="Qb9-eh-U26">
+                        <rect key="frame" x="0.0" y="623" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </toolbar>
                     <connections>
-                        <segue destination="VYI-pO-Vne" kind="relationship" relationship="rootViewController" id="0iE-49-z1A"/>
+                        <segue destination="3lM-C7-f12" kind="relationship" relationship="rootViewController" id="jHQ-PT-pl1"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vkz-3n-E2z" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1783" y="-630"/>
-        </scene>
-        <!--Directory-->
-        <scene sceneID="ZwT-qT-Fnw">
-            <objects>
-                <viewController title="Home" id="VYI-pO-Vne" userLabel="Directory" customClass="DirectoryViewController" customModule="SidebarMenu" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="sbt-vK-MOM"/>
-                        <viewControllerLayoutGuide type="bottom" id="nnT-qc-e2T"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="EV1-Ge-Haa">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <toolbarItems/>
-                    <navigationItem key="navigationItem" title="Shifter Directory" id="sk4-kU-Dpf">
-                        <barButtonItem key="leftBarButtonItem" image="menu" id="n0e-T3-Trg"/>
-                        <barButtonItem key="rightBarButtonItem" systemItem="organize" id="iU3-CI-Yl5"/>
-                    </navigationItem>
-                    <connections>
-                        <outlet property="extraButton" destination="iU3-CI-Yl5" id="1BB-Za-PGk"/>
-                        <outlet property="menuButton" destination="n0e-T3-Trg" id="Zie-bm-cWQ"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dbM-UQ-wd2" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2575.1999999999998" y="-687.7061469265368"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="O4a-aL-NR9">
@@ -1038,16 +1015,154 @@
             </objects>
             <point key="canvasLocation" x="-1401" y="-14"/>
         </scene>
+        <!--Rider View Controller-->
+        <scene sceneID="1Mh-et-f4X">
+            <objects>
+                <viewController id="3lM-C7-f12" customClass="RiderViewController" customModule="ParseStarterProject_Swift" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="A3n-LA-T69"/>
+                        <viewControllerLayoutGuide type="bottom" id="cUK-AO-Avd"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="bge-hM-9M8">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="OZS-Xm-fSG">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </mapView>
+                            <textField opaque="NO" clipsSubviews="YES" alpha="0.80000001192092896" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="When?" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JdU-Rb-9ap" customClass="CustomTextField" customModule="ParseStarterProject_Swift" customModuleProvider="target">
+                                <rect key="frame" x="23" y="199" width="330" height="60"/>
+                                <color key="backgroundColor" red="0.91477886730000002" green="0.94991112759999996" blue="0.93750542299999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="330" id="an6-RY-pHA"/>
+                                    <constraint firstAttribute="width" constant="330" id="dlG-sR-Sqk"/>
+                                    <constraint firstAttribute="height" constant="60" id="jph-5q-OUB"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="60" id="k6y-Cq-UQa"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <textInputTraits key="textInputTraits" keyboardAppearance="alert"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="image" keyPath="leftImage" value="calendar"/>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="leftPadding">
+                                        <real key="value" value="15"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="whenTextFieldChanged:" destination="3lM-C7-f12" eventType="editingChanged" id="dYr-23-Hw1"/>
+                                </connections>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WTo-zC-G5b">
+                                <rect key="frame" x="22" y="592" width="330" height="55"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="330" id="9uJ-rq-6x7"/>
+                                    <constraint firstAttribute="height" constant="55" id="F6j-5l-xgs"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="Request a ride">
+                                    <color key="titleColor" red="0.91477886730000002" green="0.94991112759999996" blue="0.93750542299999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="callAnUber:" destination="3lM-C7-f12" eventType="touchUpInside" id="FcI-7V-T0Z"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" clipsSubviews="YES" alpha="0.85000002384185791" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Where to?" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="vs1-2c-cIf" customClass="CustomTextField" customModule="ParseStarterProject_Swift" customModuleProvider="target">
+                                <rect key="frame" x="23" y="134" width="330" height="60"/>
+                                <color key="backgroundColor" red="0.91477886730000002" green="0.94991112759999996" blue="0.93750542299999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="s2v-Lu-83R"/>
+                                    <constraint firstAttribute="width" constant="330" id="zLl-TU-2Cv"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <textInputTraits key="textInputTraits" keyboardAppearance="alert"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="image" keyPath="leftImage" value="sports-car"/>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="leftPadding">
+                                        <real key="value" value="15"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="toTextFieldChanged:" destination="3lM-C7-f12" eventType="editingChanged" id="1iX-ps-5Eg"/>
+                                </connections>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" alpha="0.80000001192092896" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Pick up from" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="hZM-oD-XxB" userLabel="Pick up" customClass="CustomTextField" customModule="ParseStarterProject_Swift" customModuleProvider="target">
+                                <rect key="frame" x="22.5" y="69" width="330" height="60"/>
+                                <color key="backgroundColor" red="0.91477886730000002" green="0.94991112759999996" blue="0.93750542299999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="FNg-0c-DoO"/>
+                                    <constraint firstAttribute="width" constant="330" id="lUZ-fx-7a0"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <textInputTraits key="textInputTraits" keyboardAppearance="alert"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="image" keyPath="leftImage" value="home"/>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="leftPadding">
+                                        <real key="value" value="15"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="fromTextFieldChanged:" destination="3lM-C7-f12" eventType="editingChanged" id="89a-4s-H79"/>
+                                </connections>
+                            </textField>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="egS-cl-b14">
+                                <rect key="frame" x="23" y="134" width="330" height="0.0"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="330" id="J1N-Ad-x3a"/>
+                                    <constraint firstAttribute="height" id="WvT-Ha-xtH"/>
+                                </constraints>
+                                <sections/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="hZM-oD-XxB" firstAttribute="centerX" secondItem="bge-hM-9M8" secondAttribute="centerX" id="1Z5-cA-iAn"/>
+                            <constraint firstItem="WTo-zC-G5b" firstAttribute="centerX" secondItem="bge-hM-9M8" secondAttribute="centerX" id="BE6-Gg-zOG" userLabel="Request a ride Button.centerX = centerX"/>
+                            <constraint firstItem="cUK-AO-Avd" firstAttribute="top" secondItem="OZS-Xm-fSG" secondAttribute="bottom" id="KGt-Sz-KEH"/>
+                            <constraint firstAttribute="trailing" secondItem="OZS-Xm-fSG" secondAttribute="trailing" id="KQf-mQ-nce"/>
+                            <constraint firstItem="vs1-2c-cIf" firstAttribute="top" secondItem="egS-cl-b14" secondAttribute="top" id="WVu-C8-8Pn"/>
+                            <constraint firstItem="egS-cl-b14" firstAttribute="top" secondItem="hZM-oD-XxB" secondAttribute="bottom" constant="5" id="cee-cq-25G"/>
+                            <constraint firstItem="cUK-AO-Avd" firstAttribute="top" secondItem="WTo-zC-G5b" secondAttribute="bottom" constant="20" id="efA-Rq-qAK"/>
+                            <constraint firstItem="JdU-Rb-9ap" firstAttribute="centerX" secondItem="bge-hM-9M8" secondAttribute="centerX" id="gG8-et-GL7"/>
+                            <constraint firstItem="OZS-Xm-fSG" firstAttribute="leading" secondItem="bge-hM-9M8" secondAttribute="leading" id="hPu-Q5-xhh"/>
+                            <constraint firstItem="hZM-oD-XxB" firstAttribute="top" secondItem="A3n-LA-T69" secondAttribute="bottom" constant="5" id="jgU-33-Mla"/>
+                            <constraint firstItem="egS-cl-b14" firstAttribute="centerX" secondItem="bge-hM-9M8" secondAttribute="centerX" id="oZJ-9a-W4H"/>
+                            <constraint firstItem="JdU-Rb-9ap" firstAttribute="top" secondItem="vs1-2c-cIf" secondAttribute="bottom" constant="5" id="rAr-as-BhF"/>
+                            <constraint firstItem="OZS-Xm-fSG" firstAttribute="top" secondItem="bge-hM-9M8" secondAttribute="top" id="tZv-qP-J6D"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="vs1-2c-cIf" secondAttribute="trailing" constant="6" id="yqx-81-Gjz"/>
+                        </constraints>
+                    </view>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" id="S9M-xT-JQ1">
+                        <barButtonItem key="leftBarButtonItem" image="menu" id="xtu-b7-umg"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="organize" id="SGy-YW-JE6"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="callAnUberButton" destination="WTo-zC-G5b" id="JVu-lg-YWy"/>
+                        <outlet property="fromTextField" destination="hZM-oD-XxB" id="imN-g9-3kL"/>
+                        <outlet property="heightConstraint" destination="WvT-Ha-xtH" id="Icz-mK-KRl"/>
+                        <outlet property="mapView" destination="OZS-Xm-fSG" id="gOY-0E-saD"/>
+                        <outlet property="tableView" destination="egS-cl-b14" id="902-wF-VMX"/>
+                        <outlet property="toTextField" destination="vs1-2c-cIf" id="cMc-5x-Itn"/>
+                        <outlet property="whenTextField" destination="JdU-Rb-9ap" id="3yG-gg-oIk"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5oi-pB-tuE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2577" y="-630"/>
+        </scene>
     </scenes>
     <resources>
         <image name="calendar" width="1024" height="1024"/>
         <image name="comments" width="1024" height="1024"/>
+        <image name="home" width="256" height="256"/>
         <image name="japanvillage" width="1800" height="1350"/>
         <image name="map" width="1024" height="1024"/>
         <image name="menu" width="22" height="22"/>
         <image name="news" width="1024" height="1024"/>
         <image name="password" width="20" height="22"/>
         <image name="photo" width="1024" height="1024"/>
+        <image name="sports-car" width="256" height="256"/>
         <image name="tag" width="1024" height="1024"/>
         <image name="touch-id-icon" width="214" height="214"/>
         <image name="username" width="20" height="19"/>
