--- a/SidebarMenu/Base.lproj/Main.storyboard
+++ b/SidebarMenu/Base.lproj/Main.storyboard
@@ -1018,7 +1018,7 @@
         <!--Rider View Controller-->
         <scene sceneID="1Mh-et-f4X">
             <objects>
-                <viewController id="3lM-C7-f12" customClass="RiderViewController" customModule="ParseStarterProject_Swift" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="3lM-C7-f12" customClass="RiderViewController" customModule="SidebarMenu" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="A3n-LA-T69"/>
                         <viewControllerLayoutGuide type="bottom" id="cUK-AO-Avd"/>
@@ -1030,7 +1030,7 @@
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="OZS-Xm-fSG">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </mapView>
-                            <textField opaque="NO" clipsSubviews="YES" alpha="0.80000001192092896" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="When?" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JdU-Rb-9ap" customClass="CustomTextField" customModule="ParseStarterProject_Swift" customModuleProvider="target">
+                            <textField opaque="NO" clipsSubviews="YES" alpha="0.80000001192092896" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="When?" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JdU-Rb-9ap" customClass="CustomTextField" customModule="SidebarMenu">
                                 <rect key="frame" x="23" y="199" width="330" height="60"/>
                                 <color key="backgroundColor" red="0.91477886730000002" green="0.94991112759999996" blue="0.93750542299999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
@@ -1066,7 +1066,7 @@
                                     <action selector="callAnUber:" destination="3lM-C7-f12" eventType="touchUpInside" id="FcI-7V-T0Z"/>
                                 </connections>
                             </button>
-                            <textField opaque="NO" clipsSubviews="YES" alpha="0.85000002384185791" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Where to?" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="vs1-2c-cIf" customClass="CustomTextField" customModule="ParseStarterProject_Swift" customModuleProvider="target">
+                            <textField opaque="NO" clipsSubviews="YES" alpha="0.85000002384185791" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Where to?" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="vs1-2c-cIf" customClass="CustomTextField" customModule="SidebarMenu">
                                 <rect key="frame" x="23" y="134" width="330" height="60"/>
                                 <color key="backgroundColor" red="0.91477886730000002" green="0.94991112759999996" blue="0.93750542299999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
@@ -1085,7 +1085,7 @@
                                     <action selector="toTextFieldChanged:" destination="3lM-C7-f12" eventType="editingChanged" id="1iX-ps-5Eg"/>
                                 </connections>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" alpha="0.80000001192092896" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Pick up from" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="hZM-oD-XxB" userLabel="Pick up" customClass="CustomTextField" customModule="ParseStarterProject_Swift" customModuleProvider="target">
+                            <textField opaque="NO" clipsSubviews="YES" alpha="0.80000001192092896" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Pick up from" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="hZM-oD-XxB" userLabel="Pick up" customClass="CustomTextField" customModule="SidebarMenu">
                                 <rect key="frame" x="22.5" y="69" width="330" height="60"/>
                                 <color key="backgroundColor" red="0.91477886730000002" green="0.94991112759999996" blue="0.93750542299999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
@@ -1139,9 +1139,11 @@
                     </navigationItem>
                     <connections>
                         <outlet property="callAnUberButton" destination="WTo-zC-G5b" id="JVu-lg-YWy"/>
+                        <outlet property="extraButton" destination="SGy-YW-JE6" id="Gjp-1Q-2cy"/>
                         <outlet property="fromTextField" destination="hZM-oD-XxB" id="imN-g9-3kL"/>
                         <outlet property="heightConstraint" destination="WvT-Ha-xtH" id="Icz-mK-KRl"/>
                         <outlet property="mapView" destination="OZS-Xm-fSG" id="gOY-0E-saD"/>
+                        <outlet property="menuButton" destination="xtu-b7-umg" id="Pxa-qS-PE3"/>
                         <outlet property="tableView" destination="egS-cl-b14" id="902-wF-VMX"/>
                         <outlet property="toTextField" destination="vs1-2c-cIf" id="cMc-5x-Itn"/>
                         <outlet property="whenTextField" destination="JdU-Rb-9ap" id="3yG-gg-oIk"/>
