--- a/SidebarMenu/Base.lproj/LaunchScreen.xib
+++ b/SidebarMenu/Base.lproj/LaunchScreen.xib
@@ -14,10 +14,22 @@
         <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_180.png" translatesAutoresizingMaskIntoConstraints="NO" id="Rva-hb-CyU">
+                    <rect key="frame" x="150" y="150" width="180" height="180"/>
+                </imageView>
+            </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="Rva-hb-CyU" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="1g8-Mm-Wm1"/>
+                <constraint firstItem="Rva-hb-CyU" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="i3a-he-Dh3"/>
+            </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="548" y="455"/>
         </view>
     </objects>
+    <resources>
+        <image name="icon_180.png" width="180" height="180"/>
+    </resources>
 </document>
